cmake_minimum_required(VERSION 3.25)
project(learning-algorithm)

set(CMAKE_CXX_STANDARD 14)


add_executable(helloWorld helloWorld.cpp)
add_executable(1 test/tmp/eighth/1.cpp)
add_executable(2 test/tmp/eighth/2.cpp)
add_executable(3 test/tmp/eighth/3.cpp)
add_executable(4 test/tmp/eighth/4.cpp)
add_executable(5 test/tmp/eighth/5.cpp)
add_executable(poj1426 "test/vjudge/let_you_fly/simple search/poj1426.cpp")
add_executable(ZhansBlender match/codeforce/973/ZhansBlender.cpp)
add_executable(BattleforSurvive match/codeforce/973/BattleforSurvive.cpp)
add_executable(tmp test/tmp.cpp)
add_executable(MaintainList template/lib/list/MaintainVector.cpp)
add_executable(poj3126 "test/vjudge/let_you_fly/simple search/poj3126.cpp")
add_executable(delete match/atcoder/beginner/372/delete.cpp)
add_executable(3a match/atcoder/beginner/372/3a.cpp)
add_executable(countabc match/atcoder/beginner/372/countabc.cpp)