cmake_minimum_required(VERSION 3.25)
project(learning-algorithm)

set(CMAKE_CXX_STANDARD 14)



add_executable(hdu1495 "test/vjudge/let_you_fly/simple search/hdu1495.cpp")
add_executable(hdu2612 "test/vjudge/let_you_fly/simple search/hdu2612.cpp")
add_executable(hdu1043 "test/vjudge/let_you_fly/search advanced/hdu1043.cpp")
add_executable(hdu3567 "test/vjudge/let_you_fly/search advanced/hdu3567.cpp")
add_executable(hdu2181 "test/vjudge/let_you_fly/search advanced/hdu2181.cpp")
add_executable(hdu3533 "test/vjudge/let_you_fly/search advanced/hdu3533.cpp")
add_executable(hdu1560 "test/vjudge/let_you_fly/search advanced/hdu1560.cpp")
add_executable(hdu3085 "test/vjudge/let_you_fly/search advanced/hdu3085.cpp")
add_executable(hdu1067 "test/vjudge/let_you_fly/search advanced/hdu1067.cpp")
add_executable(hdu2102 "test/vjudge/let_you_fly/search advanced/hdu2102.cpp")
add_executable(hust1017 "test/vjudge/let_you_fly/dancing link/hust1017.cpp")
add_executable(poj2387 "test/vjudge/let_you_fly/shortest path/poj2387.cpp")